--- a/app/views/home/privacy.html.erb
+++ b/app/views/home/privacy.html.erb
@@ -1,8 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="static_content_title">PRIVACY POLICY</h1>
-      <%= @content.try(:html_safe) %>
-    </div>
-  </div>
-</div>
+<%= render "info_content" %>
