--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,7 +94,7 @@
         <div class="info">
           <h1>Nicholas Alli is a boutique like real estate agent servicing the Ajax and Pickering Market.</h1>
           <p>Nicholas Alli is a boutique like real estate agent servicing the Ajax and Pickering Market. As a young, up and coming Real Estate agent Nicholas.</p>
-          <a href="#" class="btn">Contact Nicholas</a>
+          <a href="/contact" class="btn">Contact Nicholas</a>
         </div>
       </div>
     </div>
