--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,23 +6,22 @@
 					GET CONNECTED WITH NICHOLAS
 				</div>
 				<ul>
-					<li><a href="<%= APP_CONFIG[:facebook_url] %>" target="_blank"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="<%= APP_CONFIG[:twitter_url] %>" target="_blank"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#">Blog</a></li>
+					<li><a href="<%= SiteConfiguration.first.try(:facebook_url) %>" target="_blank"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="<%= SiteConfiguration.first.try(:twitter_url) %>" target="_blank"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="<%= SiteConfiguration.first.try(:blog_url) %>">Blog</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="links">
 			<div class="container">
 				<ul>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Sellers</a></li>
-					<li><a href="#">Buyers</a></li>
-					<li><a href="#">Profile</a></li>
-					<li><a href="#">Resources</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/sellers">Sellers</a></li>
+					<li><a href="/buyers">Buyers</a></li>
+					<li><a href="/profile">Profile</a></li>
+					<li><a href="/resources">Resources</a></li>
+					<li><a href="<%= SiteConfiguration.first.try(:blog_url) %>">Blog</a></li>
+					<li><a href="/contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
