--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,16 +27,14 @@
         <a class="navbar-brand" href="/"><%= image_tag "logo.png" %></a>
         <div class="collapse navbar-collapse" id="navbarTop">
           <ul class="nav navbar-nav navbar-left">
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Sellers</a></li>
-            <li><a href="#">Buyers</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/sellers">Sellers</a></li>
+            <li><a href="/buyers">Buyers</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/resources">Resources</a></li>
+            <li><a href="<%= SiteConfiguration.first.try(:blog_url) %>">Blog</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div>
       </nav>
