--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1611,6 +1611,12 @@ footer .footer-bottom .powered-by a {
   }
 }
 
+.login-form {
+  a {
+    color: #777777 !important;
+  }
+}
+
 /* #Layout for Mobile(portrait)
 ================================================== */
 @media only screen and (max-width: 479px) {
