--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="search-container">
     <div class="container">
       <div class="title">
-        <h1>Let Nicholas to find you a new home</h1>
+        <h1>Let us help you find your next home!</h1>
       </div>
       <div class="info">
         Nicholas Alli is a boutique like real estate agent servicing the Ajax and Pickering Market. As a young, up and coming Real Estate agent Nicholas Alli prides himself on his ability to provide customers with the latest information about their market, customer service and the correct advice to maximize their investment.
