--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,6 +20,7 @@
 					<li><a href="/buyers">Buyers</a></li>
 					<li><a href="/profile">Profile</a></li>
 					<li><a href="/resources">Resources</a></li>
+					<li><a href="/terms">Terms & Conditions</a></li>
 					<li><a href="<%= SiteConfiguration.first.try(:blog_url) %>">Blog</a></li>
 					<li><a href="/contact">Contact</a></li>
 				</ul>
@@ -27,13 +28,21 @@
 		</div>
 		<div class="logo">
 			<div class="container">
-				<a href="/"><%= image_tag "logo-footer.png" %></a>
+				<div class="row">
+					<div class="col-md-8">
+						<a href="/"><%= image_tag "logo-footer.png" %></a>
+					</div>
+					<div class="col-md-2 col-md-offset-0 col-xs-4 col-xs-offset-4">
+						<a href="http://www.royallepage.ca/en/agent/ontario/ajax/nicholas-alli/46147/" target="_blank"><%= image_tag "RLP.png" %></a>
+					</div>
+				</div>
 			</div>
 		</div>
+		<br>
 		<div class="copyright">
 			<div class="container">
-				<p>&copy; 2015 Nicholas Alli Real State Services.</p>
-				<p>Nicholas Alli Real Estate Services, Inc. is a Licensed Broker in Toronto, Ontario</p>
+				<p>&copy; Copyright 2015 Nicholas Alli</p>
+				<p>Nicholas Alli is a Licensed Real Estate Agent operating in Toronto, Ontario through Royal Le Page Connect Realty Brokerage. All Rights Reserverd.  Not intended to solicit buyers and sellers currently under contract. MLS®, REALTOR®, and the associated logos are trademarks of the Canadian Real Estate Association.</p>
 			</div>
 		</div>
 	</div>
