--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -125,14 +125,14 @@ h1, h2, h3, h4, h5, h6 {
 	background: none;
 	box-shadow: none;
 	margin: 0 0 5px 0;
-	border: 2px solid #8a8a7b;
+	border: 2px solid #555555;
 }
 .page-title .btn.btn-alter {
 	font-size: 14px;
 	text-transform: uppercase;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 }
 .page-title .right-controls {
 	float: right;
@@ -148,7 +148,7 @@ header .header-top {
 	display: block;
 	width: 100%;
 	min-height: 36px;
-	background: #8a8a7b;
+	background: #555555;
 }
 header .header-top .links {
 	float: right;
@@ -177,7 +177,7 @@ header .header-top .links li:last-child a {
 header .navbar-custom {
 	display: block;
 	width: 100%;
-	border-bottom: 1px solid #8a8a7b;
+	border-bottom: 1px solid #555555;
 }
 header .navbar-custom .navbar-left {
     float: left;
@@ -210,7 +210,7 @@ header .navbar-custom ul.navbar-nav > li > a {
 	line-height: 80px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	color: #99998c;
+	color: #555555;
 	box-shadow: none;
 	border-radius: 0;
 	background: none;
@@ -339,7 +339,7 @@ header .navbar-custom .navbar-brand img {
 .search-container .searchbox .btn {
 	padding: 19px 30px;
 	color: #ffffff;
-	background: #8a8a7b;
+	background: #555555;
 }
 
 /* #Properties
@@ -462,8 +462,8 @@ header .navbar-custom .navbar-brand img {
 	visibility: visible;
 }
 .properties ul li .items:hover .btn-container .btn {
-	border: 1px solid #8a8a7b;
-	background: #8a8a7b;
+	border: 1px solid #555555;
+	background: #555555;
 }
 
 /* #feedback
@@ -490,7 +490,7 @@ header .navbar-custom .navbar-brand img {
 .welcome-container {
 	display: block;
 	width: 100%;
-	background: #8a8a7b;
+	background: #555555;
 }
 .welcome-container .welcome {
 	display: block;
@@ -511,8 +511,8 @@ header .navbar-custom .navbar-brand img {
 .welcome-container .welcome .info .btn {
 	margin: 30px 0 45px 0;
 	color: #ffffff;
-	background: #56564e;
-	border: 1px solid #56564e;
+	background: #555555;
+	border: 1px solid #555555;
 }
 
 /* #features
@@ -613,7 +613,7 @@ header .navbar-custom .navbar-brand img {
 	float: left;
 	width: 20%;
 	padding: 5px 0;
-	border: 1px solid #8a8a7b;
+	border: 1px solid #555555;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
@@ -625,13 +625,13 @@ header .navbar-custom .navbar-brand img {
 	float: left;
 	width: 40%;
 	padding: 5px 0;
-	border: 1px solid #8a8a7b;
+	border: 1px solid #555555;
 }
 .mortgage-calculator-container .calculator .down-payment .price {
 	display: inline-block;
 	width: 55%;
 	padding: 0 0 0 5%;
-	border-right: 1px solid #8a8a7b;
+	border-right: 1px solid #555555;
 }
 .mortgage-calculator-container .calculator .down-payment .percent {
 	display: inline-block;
@@ -641,12 +641,12 @@ header .navbar-custom .navbar-brand img {
 	float: left;
 	width: 20%;
 	padding: 5px 0;
-	border: 1px solid #8a8a7b;
+	border: 1px solid #555555;
 }
 .mortgage-calculator-container .calculator .calculate {
 	float: left;
 	width: 20%;
-	border: 1px solid #8a8a7b;
+	border: 1px solid #555555;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
@@ -655,8 +655,8 @@ header .navbar-custom .navbar-brand img {
 	width: 100%;
 	padding: 11px 0;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 	border-radius: 0px;
 }
 .mortgage-calculator-container .imagebox {
@@ -709,12 +709,12 @@ header .navbar-custom .navbar-brand img {
 .page-header .searchbox .form-control {
 	height: 60px;
 	box-shadow: none;
-	border: 1px solid #8a8a7b;
+	border: 1px solid #555555;
 }
 .page-header .searchbox .btn {
 	padding: 19px 30px;
 	color: #ffffff;
-	background: #8a8a7b;
+	background: #555555;
 }
 
 /* #about us
@@ -857,8 +857,8 @@ header .navbar-custom .navbar-brand img {
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 }
 
 /* #explore more
@@ -930,8 +930,8 @@ header .navbar-custom .navbar-brand img {
 	width: 100%;
 	padding: 6px 0;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 }
 
 /* #searchbar
@@ -976,8 +976,8 @@ header .navbar-custom .navbar-brand img {
 	width: 100%;
 	padding: 6px 0;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 }
 
 /* #property listing
@@ -1048,7 +1048,7 @@ header .navbar-custom .navbar-brand img {
 	display: block;
 	width: 100%;
 	margin: 0 0 10px 0;
-	border-bottom: 4px solid #8a8a7b;
+	border-bottom: 4px solid #555555;
 }
 .property-details-container .property-info .price-wrapper ul {
 	font-size: 0px;
@@ -1060,14 +1060,14 @@ header .navbar-custom .navbar-brand img {
 .property-details-container .property-info .price-wrapper ul li .item {
 	display: block;
 	text-align: center;
-	border-right: 1px solid #8a8a7b;
+	border-right: 1px solid #555555;
 }
 .property-details-container .property-info .price-wrapper ul li .item .price {
 	padding: 0 0 5px 0;
 	font-family: 'Proxima Nova Semibold';
 	font-size: 24px;
 	line-height: 100%;
-	color: #8a8a7b;
+	color: #555555;
 }
 .property-details-container .property-info .price-wrapper ul li .item .caption {
 	font-size: 12px;
@@ -1091,7 +1091,7 @@ header .navbar-custom .navbar-brand img {
 .property-details-container .property-info .property-details .added {
 	padding: 10px 0 0 0;
 	line-height: 100%;
-	color: #8a8a7b;
+	color: #555555;
 }
 .property-details-container .property-info .property-details .viewed {
 	font-family: 'Proxima Nova Semibold';
@@ -1109,8 +1109,8 @@ header .navbar-custom .navbar-brand img {
 	font-size: 12px;
 	letter-spacing: 2px;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 }
 .property-details-container .property-slider {
 	display: block;
@@ -1146,11 +1146,11 @@ header .navbar-custom .navbar-brand img {
 	font-size: 12px;
 	letter-spacing: 2px;
 	color: #ffffff;
-	background: #8a8a7b;
-	border: 1px solid #8a8a7b;
+	background: #555555;
+	border: 1px solid #555555;
 }
 .property-details-container .details-tab .nav-tabs {
-    border-bottom: 5px solid #8a8a7b;
+    border-bottom: 5px solid #555555;
 }
 .property-details-container .details-tab .nav-tabs > li {
     margin-bottom: 0;
@@ -1186,7 +1186,7 @@ header .navbar-custom .navbar-brand img {
 .property-details-container .details-tab .property-details .added {
 	padding: 10px 0 0 0;
 	line-height: 100%;
-	color: #8a8a7b;
+	color: #555555;
 }
 .property-details-container .details-tab .property-details .viewed {
 	padding: 0 0 10px 0;
@@ -1257,7 +1257,7 @@ footer .footer-top {
 	width: 100%;
 	padding: 30px 0;
 	color: #ffffff;
-	background: #56564e;
+	background: #555555;
 }
 footer .footer-top .social {
 	display: block;
@@ -1332,7 +1332,7 @@ footer .footer-bottom {
 	height: 25px;
 	padding: 10px 0 30px 0;
 	text-align: center;
-	background: #8a8a7b;
+	background: #555555;
 }
 footer .footer-bottom .powered-by {
 	color: #ffffff;
@@ -1574,7 +1574,7 @@ footer .footer-bottom .powered-by a {
 
 .btn-alter.active {
   background:#fff !important;
-  color: #8a8a7b !important;
+  color: #555555 !important;
 }
 
 .property-box {
@@ -1597,17 +1597,17 @@ footer .footer-bottom .powered-by a {
 .btn-alter, .btn-primary {
   text-transform: uppercase;
   color: #ffffff;
-  background: #8a8a7b;
-  border: 1px solid #8a8a7b;
+  background: #555555;
+  border: 1px solid #555555;
   &:hover {
-    color: #8a8a7b;
+    color: #555555;
     background: #ffffff;
-    border: 1px solid #8a8a7b;
+    border: 1px solid #555555;
   }
   &:active {
-    color: #8a8a7b !important;
+    color: #555555 !important;
     background: #ffffff !important;
-    border: 1px solid #8a8a7b !important;
+    border: 1px solid #555555 !important;
   }
 }
 
