change button colot

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -125,14 +125,14 @@ h1, h2, h3, h4, h5, h6 {
 	background: none;
 	box-shadow: none;
 	margin: 0 0 5px 0;
-	border: 2px solid #555555;
+	border: 2px solid #213A64;
 }
 .page-title .btn.btn-alter {
 	font-size: 14px;
 	text-transform: uppercase;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 .page-title .right-controls {
 	float: right;
@@ -339,7 +339,7 @@ header .navbar-custom .navbar-brand img {
 .search-container .searchbox .btn {
 	padding: 19px 30px;
 	color: #ffffff;
-	background: #555555;
+	background: #213A64;
 }
 
 /* #Properties
@@ -462,8 +462,8 @@ header .navbar-custom .navbar-brand img {
 	visibility: visible;
 }
 .properties ul li .items:hover .btn-container .btn {
-	border: 1px solid #555555;
-	background: #555555;
+	border: 1px solid #213A64;
+	background: #213A64;
 }
 
 /* #feedback
@@ -511,8 +511,8 @@ header .navbar-custom .navbar-brand img {
 .welcome-container .welcome .info .btn {
 	margin: 30px 0 45px 0;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 
 /* #features
@@ -655,8 +655,8 @@ header .navbar-custom .navbar-brand img {
 	width: 100%;
 	padding: 11px 0;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 	border-radius: 0px;
 }
 .mortgage-calculator-container .imagebox {
@@ -714,7 +714,7 @@ header .navbar-custom .navbar-brand img {
 .page-header .searchbox .btn {
 	padding: 19px 30px;
 	color: #ffffff;
-	background: #555555;
+	background: #213A64;
 }
 
 /* #about us
@@ -857,8 +857,8 @@ header .navbar-custom .navbar-brand img {
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 
 /* #explore more
@@ -930,8 +930,8 @@ header .navbar-custom .navbar-brand img {
 	width: 100%;
 	padding: 6px 0;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 
 /* #searchbar
@@ -976,8 +976,8 @@ header .navbar-custom .navbar-brand img {
 	width: 100%;
 	padding: 6px 0;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 
 /* #property listing
@@ -1109,8 +1109,8 @@ header .navbar-custom .navbar-brand img {
 	font-size: 12px;
 	letter-spacing: 2px;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 .property-details-container .property-slider {
 	display: block;
@@ -1146,8 +1146,8 @@ header .navbar-custom .navbar-brand img {
 	font-size: 12px;
 	letter-spacing: 2px;
 	color: #ffffff;
-	background: #555555;
-	border: 1px solid #555555;
+	background: #213A64;
+	border: 1px solid #213A64;
 }
 .property-details-container .details-tab .nav-tabs {
     border-bottom: 5px solid #555555;
@@ -1574,7 +1574,7 @@ footer .footer-bottom .powered-by a {
 
 .btn-alter.active {
   background:#fff !important;
-  color: #555555 !important;
+  color: #213A64 !important;
 }
 
 .property-box {
@@ -1597,17 +1597,17 @@ footer .footer-bottom .powered-by a {
 .btn-alter, .btn-primary {
   text-transform: uppercase;
   color: #ffffff;
-  background: #555555;
-  border: 1px solid #555555;
+  background: #213A64;
+  border: 1px solid #213A64;
   &:hover {
-    color: #555555;
+    color: #213A64;
     background: #ffffff;
-    border: 1px solid #555555;
+    border: 1px solid #213A64;
   }
   &:active {
-    color: #555555 !important;
+    color: #213A64 !important;
     background: #ffffff !important;
-    border: 1px solid #555555 !important;
+    border: 1px solid #213A64 !important;
   }
 }
 
