fix search results height

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -789,6 +789,7 @@ header .navbar-custom .navbar-brand img {
 .property-box .address {
 	padding: 0 0 5px 0;
 	font-size: 24px;
+  height:75px;
 }
 .property-box .property-carousel {
 	position: relative;
@@ -796,6 +797,7 @@ header .navbar-custom .navbar-brand img {
 	padding: 5px 10px 0 10px;
 	border-top: 1px solid #bababa;
 	border-bottom: 1px solid #bababa;
+  height:116px;
 }
 .property-box .property-carousel .item {
 	margin: 10px 15px;
