blog and static pages

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -20,6 +20,7 @@
           <div class="admin-box">
             <h3>Configurations</h3>
             <%= link_to "Set Up Site", admin_configurations_path, class: "btn btn-block btn-primary" %>
+            <%= link_to "Manage Blog", admin_blog_path, class: "btn btn-block btn-primary" %>
           </div>
         </div>
       </div>
