front end polishes

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -9,7 +9,7 @@
 			<div class="col-sm-2">
 				<div class="info">
 					<span>Quick Search</span>
-					<p>Let Nicholas to find you a new home</p>
+					<p>Let Nicholas help find your next home</p>
 				</div>
 			</div>
 			<div class="col-sm-9">
@@ -79,17 +79,6 @@
 						  <% end %>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="welcome-container">
-		<div class="container">
-			<div class="welcome">
-				<div class="info">
-					<h1>Nicholas Alli is a boutique like real estate agent servicing the Ajax and Pickering Market.</h1>
-					<p>Nicholas Alli is a boutique like real estate agent servicing the Ajax and Pickering Market. As a young, up and coming Real Estate agent Nicholas.</p>
-					<a href="/contact" class="btn">Contact Nicholas</a>
 				</div>
 			</div>
 		</div>
