--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -9,7 +9,7 @@
       <div class="col-sm-2">
         <div class="info">
           <span>Quick Search</span>
-          <p>Let Nicholas to find you a new home</p>
+          <p>Let Nicholas help find your next home</p>
         </div>
       </div>
       <div class="col-sm-9">
