--- a/app/views/layouts/_subscribe_form.html.erb
+++ b/app/views/layouts/_subscribe_form.html.erb
@@ -1,3 +1,4 @@
+<% if false %>
 <div class="subscribe">
   <div class="title">
     Subscribe to our free newsletter
@@ -19,3 +20,4 @@
     </form>
   </div>
 </div>
+<% end %>
