--- a/app/views/blogposts/show.html.slim
+++ b/app/views/blogposts/show.html.slim
@@ -7,7 +7,7 @@
       br
       .row
         .col-md-3
-          = image_tag @blogpost.featured_image, class: "img-responsive"
+          = image_tag @blogpost.featured_image(:medium), class: "img-responsive"
         .col-md-9
           h4
             = @blogpost.published_at.strftime("%b %d, %Y")
