--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
             <li><a href="/buyers">Buyers</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/resources">Resources</a></li>
+            <li><a href="#modal-advanced-search" class="navbar-link" data-toggle="modal">Search</a></li>
             <li><a href="<%= SiteConfiguration.first.try(:blog_url) %>">Blog</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
