--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,6 +72,7 @@
       </li>
     </ul>
   </div>
+  <% if false %>
   <div class="feedback-container">
     <div class="container">
       <div class="row">
@@ -99,6 +100,7 @@
       </div>
     </div>
   </div>
+  <% end %>
   <div class="mortgage-calculator-container">
     <div class="container">
       <div class="info">
